syntax = "proto3";

package org.bithon.agent.rpc.brpc;

option java_multiple_files = true;

enum ApplicationType {
  /**
   * enum must start from 0
   */
  JAVA = 0;
}

/***************************************************************************/
/*************************** MessageHeader       ***************************/
/***************************************************************************/
message BrpcMessageHeader {
  string appName = 1;
  string env = 2;
  string instanceName = 3;
  string hostIp = 4;
  int32 port = 5;
  ApplicationType appType = 6;
}
